--- a/OOP/HW2-humanity-OOP.ipynb
+++ b/OOP/HW2-humanity-OOP.ipynb
@@ -131,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Terra, Moon, Mars, Maaaa, asdasd.\n"
+      "Terra, Moon, Mars, Europe, Titan.\n"
      ]
     }
    ],
